id -> camera_id

--- a/inspection/public/alarm-add.html
+++ b/inspection/public/alarm-add.html
@@ -26,7 +26,7 @@
       <div class="layui-form-item">
         
               <div class="inner">
-                  <div class="center_cage" style="margin-left: -1px;width: auto;">
+                  <div class="center_cage" style="margin-left: -1px;width:auto;">
                       <div id="dvpic" class="dataAllBorder01 cage_cl"
                           style="!important; position: relative;width: 644px;height: 351px;">
                           <div class="dataAllBorder02" style="position: relative; overflow: hidden;">
@@ -193,7 +193,7 @@
                             }
                         }
                         if (!vhas) {
-                            Build_camera_array(datacamera[i].id, datacamera[i].camera_name, datacamera[i].textx, datacamera[i].texty, datacamera[i].canvaswidth, datacamera[i].canvasheight);
+                            Build_camera_array(datacamera[i].camera_id, datacamera[i].camera_name, datacamera[i].textx, datacamera[i].texty, datacamera[i].canvaswidth, datacamera[i].canvasheight);
                         }
                     }
                     drowinit();
