--- a/inspection/public/hadle.html
+++ b/inspection/public/hadle.html
@@ -510,7 +510,7 @@
                             }
                         }
                         if (!vhas) {
-                            Build_camera_array(datacamera[i].id, datacamera[i].camera_name, datacamera[i].textx, datacamera[i].texty, datacamera[i].canvaswidth, datacamera[i].canvasheight);
+                            Build_camera_array(datacamera[i].camera_id, datacamera[i].camera_name, datacamera[i].textx, datacamera[i].texty, datacamera[i].canvaswidth, datacamera[i].canvasheight);
                         }
                     }
                     if (arr_camera.length > 0) {
